welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:31: error: recursive method faireFleur needs result type
	faireFleur(Color.PINK)
        ^FlowerCase:50: error: not found: value faireMotif
faireMotif()
^